Bug Fix:Text-Icon-Alignment

--- a/app/assets/stylesheets/simulator.scss
+++ b/app/assets/stylesheets/simulator.scss
@@ -30,7 +30,7 @@
   text-decoration: none;
   bottom: 30px;
   transition: .3s;
-  width: 160px;
+  width: 170px;
   z-index: 999;
 }
 
